--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0",
     "swiper": "^11.1.4"
