--- a/package.json
+++ b/package.json
@@ -12,14 +12,19 @@
   "dependencies": {
     "@tanstack/react-query": "^5.40.0",
     "axios": "^1.7.2",
+    "firebase": "^10.12.2",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
     "react": "^18.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.2",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.11.0",
     "swiper": "^11.1.4"
   },
   "devDependencies": {
