--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-intersection-observer": "^9.10.2",
+    "react-loading-skeleton": "^3.4.0",
     "react-modal": "^3.16.1",
     "react-paginate": "^8.2.0",
     "react-router-dom": "^6.23.1",
