--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@stripe/stripe-js": "^3.5.0",
     "@tanstack/react-query": "^5.40.1",
     "@tanstack/react-table": "^8.17.3",
+    "aos": "^2.3.4",
     "axios": "^1.7.2",
     "chart.js": "^4.4.3",
     "firebase": "^10.12.2",
